--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,8 @@
 ---
 # file: roles/pacemaker/tasks/main.yml
+- include: destroy.yml
+  when: pacemaker_destroy_cluster and pacemaker_destroy_cluster == true
+
 - include: install.yml
 - include: user.yml
 - include: auth.yml
