--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,4 +10,5 @@ pacemaker_password_sha512: $6$rounds=100000$sxqqM9rY4NKIhXGw$AEEMlWhS6/84MzNfDe4
 pacemaker_property_stonith: false
 pacemaker_property_quorum: ignore
 pacemaker_property_watchdog: false
+pacemaker_property_symmetric_cluster: false
 pacemaker_destroy_cluster: false
