[auth.yml] Fix a wrong join()

--- a/tasks/auth.yml
+++ b/tasks/auth.yml
@@ -3,7 +3,7 @@
 - name: Authenticating to pcsd daemon
   pcs_cluster:
     command=auth
-    hosts={{ pacemaker_hosts | join('') }}
+    hosts="{{ pacemaker_hosts | join(' ') }}"
     username={{ pacemaker_user }}
     password={{ pacemaker_password }}
     force=no
