[install.yml] Fix description name about the starting service

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -27,7 +27,7 @@
     - pacemaker
     - pacemaker-package
 
-- name: Enabling Pacemaker service
+- name: Starting Pacemaker service
   service:
     name=pacemaker
     state=started
