[main] Add a pause to be sure that service is started

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,6 +5,9 @@
 
 - include: install.yml
 - include: user.yml
+- pause:
+    prompt="Waiting few seconds..."
+    seconds=5
 - include: auth.yml
 - include: sync.yml
 - include: start.yml
