--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -22,6 +22,7 @@
     update_cache=yes
   with_items:
     - pcs
+    - libdatetime-format-dateparse-perl
   when: ansible_os_family == 'Debian'
   tags:
     - pacemaker
@@ -35,6 +36,7 @@
   with_items:
     - pacemaker
     - pcs
+    - perl-DateTime-Format-DateParse
   when: ansible_os_family == 'RedHat'
   tags:
     - pacemaker
